name:                tt
version:             0.1.0.0
synopsis:            Command line time tracking and todo tool
-- description:
homepage:            https://github.com/githubuser/tt#readme
license:             BSD3
license-file:        LICENSE
author:              Risto Saarelma <risto.saarelma@iki.fi>
maintainer:          Risto Saarelma <risto.saarelma@iki.fi>
copyright:           Copyright (C) 2018 Risto Saarelma
category:            Console
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tt
  gch-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec
