name:                tt
version:             0.1.0.0
synopsis:            Command line time tracking and todo tool
-- description:
homepage:            https://github.com/rsaarelm/tt
license:             BSD3
license-file:        LICENSE
author:              Risto Saarelma <risto.saarelma@iki.fi>
maintainer:          Risto Saarelma <risto.saarelma@iki.fi>
copyright:           Copyright (C) 2018 Risto Saarelma
category:            Console
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Tt.Util
                       Tt.Entry
                       Tt.Parser
                       Tt.Msg
                       Tt.Goal
                       Tt.Db
                       Tt.Work
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       directory,
                       filepath,
                       intervals,
                       parsec,
                       time

executable tt
  ghc-options:         -rtsopts -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Options
                       Tt.Util
                       Tt.Entry
                       Tt.Parser
                       Tt.Msg
                       Tt.Goal
                       Tt.Db
                       Tt.Work
  build-depends:       base,
                       containers,
                       directory,
                       filepath,
                       intervals,
                       optparse-applicative,
                       parsec,
                       time

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  default-language:    Haskell2010
  build-depends:       base,
                       hspec,
                       intervals,
                       time,
                       tt
